# co650-assignment-task-2

./: CMakeLists.txt  co650-assignment-task-2.sln  readme.md
client/: CMakeLists.txt  client.vcxproj
client/src/: data-12.h  main.cpp
co650-exercises-week-11-sockets/: CMakeLists.txt  co650-exercises-week-11.sln
co650-exercises-week-11-sockets/client/: CMakeLists.txt
co650-exercises-week-11-sockets/client/src/: co650-exercises-week-11-client.vcxproj
co650-exercises-week-11-sockets/server/: CMakeLists.txt
co650-exercises-week-11-sockets/server/src/: co650-exercises-week-11-server.vcxproj  main.cpp
co650-exercises-week-12-tcp/: co650-exercises-week-12.sln
co650-exercises-week-12-tcp/client/: CMakeLists.txt
co650-exercises-week-12-tcp/client/src/: co650-exercises-week-12-client.vcxproj
co650-exercises-week-12-tcp/server/: CMakeLists.txt
co650-exercises-week-12-tcp/server/src/: co650-exercises-week-12-server.vcxproj
server/: CMakeLists.txt  server.vcxproj
server/src/: main-11.cpp  main-12.cpp  main.cpp
shared/: CMakeLists.txt  shared.vcxproj  shared.vcxproj.filters
shared/src/: client.cpp  client.h  comms.cpp  comms.h  server.cpp  server.h
